--- a/css/style.css
+++ b/css/style.css
@@ -998,7 +998,8 @@ body {
 
 .social__icon--link:hover {
   transform: scale(130%);
-  transition: 175ms ease;
+  color: #fff;
+  transition: all 175ms ease;
 }
 
 .social__logo {
